# curse-lang

./: Cargo.toml  README.md
compiler/curse/: Cargo.toml
compiler/curse/src/: main.rs  programs.rs
compiler/curse_arena/: Cargo.toml
compiler/curse_arena/src/: lib.rs  new.rs
compiler/curse_ast/: Cargo.toml
compiler/curse_ast/src/: arena.rs  choice.rs  def.rs  expr.rs  function.rs  lib.rs  pat.rs  record.rs  tok.rs  ty.rs
compiler/curse_ast/src/ast/: def.rs  mod.rs  pat.rs  program.rs  record.rs  shared.rs  tok.rs
compiler/curse_ast/src/ast/expr/: closure.rs  mod.rs
compiler/curse_ast/src/ast/ty/: mod.rs  named.rs
compiler/curse_ast/src/defs/: choice_def.rs  mod.rs  struct_def.rs
compiler/curse_ast/src/expr/: closure.rs  constructor.rs  mod.rs
compiler/curse_ast/src/pat/: tuple.rs
compiler/curse_ast/src/ty/: mod.rs  named.rs
compiler/curse_ast_lowering/: Cargo.toml
compiler/curse_ast_lowering/src/: arena_alloc.rs  error.rs  lib.rs  lowerer.rs
compiler/curse_cps/: Cargo.toml
compiler/curse_cps/src/: cpsexpr.rs  gensym.rs  lib.rs  match_compiler.rs  match_compiler2.rs  tests.rs
compiler/curse_cps/src/match_compiler/: mod.rs  tests.rs
compiler/curse_hir/: Cargo.toml
compiler/curse_hir/src/: arena.rs  check_match.rs  ctx.rs  def.rs  dot.rs  equations.rs  error.rs  expr.rs  hm.rs  hm2.rs  hm3.rs  lib.rs  lowering.rs  map.rs  pat.rs  spanned.rs  tests.rs  ty.rs  types.rs
compiler/curse_hir/src/expr/: mod.rs
compiler/curse_hir/src/hir/: def.rs  expr.rs  map.rs  mod.rs  pat.rs  ty.rs
compiler/curse_hir/src/usefulness/: error.rs  mod.rs
compiler/curse_interner/: Cargo.toml
compiler/curse_interner/src/: lib.rs
compiler/curse_interpreter/: Cargo.toml  binary_tree.curse  combinators.curse  iter.curse  llist.curse  patterns.curse  project_euler14.curse  record_patterns.curse  std.curse  testing.curse  yc.curse
compiler/curse_interpreter/project_euler/: problem1.curse  problem2.curse  problem3.curse  problem5.curse  problem6.curse  problem7.curse
compiler/curse_interpreter/src/: builtins.rs  error.rs  lib.rs  main.rs  repl.rs
compiler/curse_interpreter/src/evaluation/: mod.rs
compiler/curse_interpreter/src/interpreter/: builtins.rs  error.rs  mod.rs  pattern_matching.rs  value.rs
compiler/curse_interpreter/src/value/: mod.rs
compiler/curse_mir/: Cargo.toml
compiler/curse_mir/src/: equations.rs  error.rs  ident.rs  lib.rs  lowering.rs  pat.rs  spanned.rs  types.rs
compiler/curse_mir/src/defs/: mod.rs
compiler/curse_mir/src/expr/: arm.rs  builtin.rs  constructor.rs
compiler/curse_mir/src/lowering_from_ast/: mod.rs
compiler/curse_mir/src/type_context/: mod.rs
compiler/curse_mir/src/types/: printer.rs
compiler/curse_mir/src/usefulness/: error.rs  mod.rs
compiler/curse_parse/: Cargo.toml  build.rs
compiler/curse_parse/src/: error.rs  grammar.lalrpop  lexer.rs  lib.rs  parse.rs  pat_arena.rs  ty_arena.rs
compiler/curse_span/: Cargo.toml
compiler/curse_span/src/: lib.rs
designs/: custom_types.md  effects.md  fields_as_patterns.md  generics_syntax.md  module_system.md  piecewise_and_struct_syntax.md  regions.md
examples/: branching.curse  bst.curse  fails.curse  types.curse
src/: curse1.lalrpop  error.rs  grammar.lalrpop  lex.rs  main.rs  repl.rs
src/ast/: expr.rs  mod.rs  pat.rs  ty.rs  types.rs
src/interpreter/: builtins.rs  error.rs  mod.rs  pattern_matching.rs  value.rs
src/repl/: mod.rs
