[package]
name = "curse_ast_lowering"
version = "0.0.0"
edition = "2021"

[dependencies]
curse_ast = { path = "../curse_ast" }
curse_interner = { path = "../curse_interner" }
curse_span = { path = "../curse_span" }
curse_hir = { path = "../curse_hir" }
miette = "5.*"
thiserror = "1.*"
bumpalo = "3.13.0"

