[package]
name = "curse_cps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curse_interner = { path = "../curse_interner" }
curse_span = { path = "../curse_span" }
curse_hir = { path = "../curse_hir" }
