[package]
name = "curse_hir"
version = "0.0.0"
edition = "2021"

[dependencies]
curse_ast = { path = "../curse_ast" }
curse_arena = { path = "../curse_arena" }
curse_interner = { path = "../curse_interner" }
curse_span = { path = "../curse_span" }
typed-arena = "2.0.2"
miette = "5.*"
thiserror = "1.*"

